# Scaler-hack

./: .gitignore  Dockerfile  deploy.sh  inference.py
api_design_env/: Dockerfile  README.md  __init__.py  __main__.py  baseline.py  baseline_openai.py  client.py  models.py  openenv.yaml  pyproject.toml
api_design_env/server/: Dockerfile  app.py  environment.py  grader.py  problems.py  requirements.txt
tests/: test_api_design_env.py
